--- a/src/assets/translations/vi/home.json
+++ b/src/assets/translations/vi/home.json
@@ -1,5 +1,6 @@
 {
   "header": {
-    "title": "Trang chủ"
+    "title": "Trang chủ",
+    "testParam": "Test thử truyền param, đây là số {{number}}"
   }
 }
