--- a/src/assets/translations/vi/common.json
+++ b/src/assets/translations/vi/common.json
@@ -4,6 +4,7 @@
   "header": {
     "home": "trang chủ",
     "about": "về chúng tôi",
-    "language": "ngôn ngữ"
+    "language": "ngôn ngữ",
+    "toggle": "Chuyển đổi"
   }
 }
